--- a/admin/src/main/resources/org/jboss/capedwarf/admin/index.xhtml
+++ b/admin/src/main/resources/org/jboss/capedwarf/admin/index.xhtml
@@ -1,5 +1,5 @@
 <html>
 <head>
-  <meta http-equiv="Refresh" content="0; URL=datastore.cdi"/>
+    <meta http-equiv="Refresh" content="0; URL=datastore.jsf"/>
 </head>
 </html>
